file(GLOB_RECURSE files_cpp *.cc)

function(add_usipp_executable NAME)
    add_executable(${NAME} ${NAME}.cc)
    target_link_libraries(${NAME} usipp)
endfunction()

add_usipp_executable(arps)
add_usipp_executable(arpw)
add_usipp_executable(dns-tkey)
add_usipp_executable(icmp6_sniff)
add_usipp_executable(icmp_sniff)
add_usipp_executable(ipcomp)
add_usipp_executable(martian_dest_test2)
add_usipp_executable(martian_dest_test6)
add_usipp_executable(martian_dest_test)
add_usipp_executable(synping)
add_usipp_executable(trace)
add_usipp_executable(udp6_spoof)
add_usipp_executable(udp_spoof)
add_usipp_executable(wifi)
